[gd_scene load_steps=6 format=3 uid="uid://t4tnwe8g1ykc"]

[ext_resource type="Script" path="res://scenes/Playable/Menu.gd" id="1_ymwdn"]
[ext_resource type="FontFile" uid="uid://dah8llpnex5du" path="res://Assets/fonts/barcode/BarcadeExpanded-2aq8.otf" id="2_occ5i"]
[ext_resource type="Texture2D" uid="uid://dfylm5k3i3mwj" path="res://tileSet&sprites/crook.png" id="3_8flyo"]
[ext_resource type="Texture2D" uid="uid://cx3pte28vgxt5" path="res://tileSet&sprites/cloud.png" id="4_7qsr1"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_11rlk"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(600, 1, 1)
gravity = Vector3(-20.89, 98, 0)
scale_min = 3.0
scale_max = 3.0

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ymwdn")

[node name="images" type="Node" parent="."]

[node name="character" type="TextureRect" parent="images"]
offset_left = 447.0
offset_top = 513.0
offset_right = 479.0
offset_bottom = 545.0
scale = Vector2(4.25, 4.25)
texture = ExtResource("3_8flyo")
flip_h = true

[node name="building" type="ColorRect" parent="images"]
offset_left = 832.0
offset_top = -64.0
offset_right = 1056.0
offset_bottom = 520.0
color = Color(0.254902, 0.254902, 0.254902, 1)

[node name="door" type="ColorRect" parent="images/building"]
layout_mode = 0
offset_left = 98.0
offset_top = 557.0
offset_right = 112.0
offset_bottom = 580.0
color = Color(0.866667, 0.858824, 0.458824, 1)

[node name="door2" type="ColorRect" parent="images/building"]
layout_mode = 0
offset_left = 112.0
offset_top = 557.0
offset_right = 126.0
offset_bottom = 580.0
color = Color(0.866667, 0.858824, 0.458824, 1)

[node name="window" type="ColorRect" parent="images/building"]
layout_mode = 0
offset_left = 32.0
offset_top = 288.0
offset_right = 64.0
offset_bottom = 320.0
color = Color(0.866667, 0.858824, 0.109804, 1)

[node name="window2" type="ColorRect" parent="images/building"]
layout_mode = 0
offset_left = 96.0
offset_top = 288.0
offset_right = 128.0
offset_bottom = 320.0
color = Color(0.866667, 0.858824, 0.109804, 1)

[node name="window3" type="ColorRect" parent="images/building"]
layout_mode = 0
offset_left = 160.0
offset_top = 288.0
offset_right = 192.0
offset_bottom = 320.0
color = Color(0.866667, 0.858824, 0.109804, 1)

[node name="window4" type="ColorRect" parent="images/building"]
layout_mode = 0
offset_left = 32.0
offset_top = 224.0
offset_right = 64.0
offset_bottom = 256.0
color = Color(0.866667, 0.858824, 0.109804, 1)

[node name="window5" type="ColorRect" parent="images/building"]
layout_mode = 0
offset_left = 96.0
offset_top = 224.0
offset_right = 128.0
offset_bottom = 256.0
color = Color(0.866667, 0.858824, 0.109804, 1)

[node name="window6" type="ColorRect" parent="images/building"]
layout_mode = 0
offset_left = 160.0
offset_top = 224.0
offset_right = 192.0
offset_bottom = 256.0
color = Color(0.866667, 0.858824, 0.109804, 1)

[node name="window7" type="ColorRect" parent="images/building"]
layout_mode = 0
offset_left = 32.0
offset_top = 160.0
offset_right = 64.0
offset_bottom = 192.0
color = Color(0.866667, 0.858824, 0.109804, 1)

[node name="window8" type="ColorRect" parent="images/building"]
layout_mode = 0
offset_left = 96.0
offset_top = 160.0
offset_right = 128.0
offset_bottom = 192.0
color = Color(0.866667, 0.858824, 0.109804, 1)

[node name="window9" type="ColorRect" parent="images/building"]
layout_mode = 0
offset_left = 160.0
offset_top = 160.0
offset_right = 192.0
offset_bottom = 192.0
color = Color(0.866667, 0.858824, 0.109804, 1)

[node name="window10" type="ColorRect" parent="images/building"]
layout_mode = 0
offset_left = 32.0
offset_top = 96.0
offset_right = 64.0
offset_bottom = 128.0
color = Color(0.866667, 0.858824, 0.109804, 1)

[node name="window11" type="ColorRect" parent="images/building"]
layout_mode = 0
offset_left = 96.0
offset_top = 96.0
offset_right = 128.0
offset_bottom = 128.0
color = Color(0.866667, 0.858824, 0.109804, 1)

[node name="window12" type="ColorRect" parent="images/building"]
layout_mode = 0
offset_left = 160.0
offset_top = 96.0
offset_right = 192.0
offset_bottom = 128.0
color = Color(0.866667, 0.858824, 0.109804, 1)

[node name="window13" type="ColorRect" parent="images/building"]
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 64.0
offset_bottom = 64.0
color = Color(0.866667, 0.858824, 0.109804, 1)

[node name="window14" type="ColorRect" parent="images/building"]
layout_mode = 0
offset_left = 96.0
offset_top = 32.0
offset_right = 128.0
offset_bottom = 64.0
color = Color(0.866667, 0.858824, 0.109804, 1)

[node name="window15" type="ColorRect" parent="images/building"]
layout_mode = 0
offset_left = 160.0
offset_top = 32.0
offset_right = 192.0
offset_bottom = 64.0
color = Color(0.866667, 0.858824, 0.109804, 1)

[node name="window16" type="ColorRect" parent="images/building"]
layout_mode = 0
offset_left = 32.0
offset_top = 352.0
offset_right = 64.0
offset_bottom = 384.0
color = Color(0.866667, 0.858824, 0.109804, 1)

[node name="window17" type="ColorRect" parent="images/building"]
layout_mode = 0
offset_left = 96.0
offset_top = 352.0
offset_right = 128.0
offset_bottom = 384.0
color = Color(0.866667, 0.858824, 0.109804, 1)

[node name="window18" type="ColorRect" parent="images/building"]
layout_mode = 0
offset_left = 160.0
offset_top = 352.0
offset_right = 192.0
offset_bottom = 384.0
color = Color(0.866667, 0.858824, 0.109804, 1)

[node name="window19" type="ColorRect" parent="images/building"]
layout_mode = 0
offset_left = 32.0
offset_top = 480.0
offset_right = 64.0
offset_bottom = 512.0
color = Color(0.866667, 0.858824, 0.109804, 1)

[node name="window20" type="ColorRect" parent="images/building"]
layout_mode = 0
offset_left = 96.0
offset_top = 480.0
offset_right = 128.0
offset_bottom = 512.0
color = Color(0.866667, 0.858824, 0.109804, 1)

[node name="window21" type="ColorRect" parent="images/building"]
layout_mode = 0
offset_left = 160.0
offset_top = 480.0
offset_right = 192.0
offset_bottom = 512.0
color = Color(0.866667, 0.858824, 0.109804, 1)

[node name="window22" type="ColorRect" parent="images/building"]
layout_mode = 0
offset_left = 32.0
offset_top = 416.0
offset_right = 64.0
offset_bottom = 448.0
color = Color(0.866667, 0.858824, 0.109804, 1)

[node name="window23" type="ColorRect" parent="images/building"]
layout_mode = 0
offset_left = 96.0
offset_top = 416.0
offset_right = 128.0
offset_bottom = 448.0
color = Color(0.866667, 0.858824, 0.109804, 1)

[node name="window24" type="ColorRect" parent="images/building"]
layout_mode = 0
offset_left = 160.0
offset_top = 416.0
offset_right = 192.0
offset_bottom = 448.0
color = Color(0.866667, 0.858824, 0.109804, 1)

[node name="GPUParticles2D" type="GPUParticles2D" parent="images"]
position = Vector2(652, -44)
amount = 50
process_material = SubResource("ParticleProcessMaterial_11rlk")
lifetime = 5.0
speed_scale = 3.39

[node name="CloudFormation1" type="Node" parent="images"]

[node name="cloud" type="TextureRect" parent="images/CloudFormation1"]
offset_left = 636.0
offset_top = -307.0
offset_right = 1636.0
offset_bottom = 443.0
texture = ExtResource("4_7qsr1")
flip_v = true

[node name="cloud2" type="TextureRect" parent="images/CloudFormation1"]
offset_left = 390.0
offset_top = -372.0
offset_right = 1390.0
offset_bottom = 378.0
texture = ExtResource("4_7qsr1")
flip_v = true

[node name="cloud3" type="TextureRect" parent="images/CloudFormation1"]
offset_left = 302.0
offset_top = -194.0
offset_right = 1302.0
offset_bottom = 556.0
texture = ExtResource("4_7qsr1")
flip_h = true

[node name="cloud4" type="TextureRect" parent="images/CloudFormation1"]
offset_left = 546.0
offset_top = -221.0
offset_right = 1546.0
offset_bottom = 529.0
texture = ExtResource("4_7qsr1")
flip_v = true

[node name="CloudFormation2" type="Node" parent="images"]

[node name="cloud" type="TextureRect" parent="images/CloudFormation2"]
visible = false
offset_left = -48.0
offset_top = -325.0
offset_right = 952.0
offset_bottom = 425.0
texture = ExtResource("4_7qsr1")
flip_v = true

[node name="cloud2" type="TextureRect" parent="images/CloudFormation2"]
offset_left = -262.0
offset_top = -313.0
offset_right = 738.0
offset_bottom = 437.0
texture = ExtResource("4_7qsr1")
flip_h = true
flip_v = true

[node name="cloud3" type="TextureRect" parent="images/CloudFormation2"]
visible = false
offset_left = -382.0
offset_top = -212.0
offset_right = 618.0
offset_bottom = 538.0
texture = ExtResource("4_7qsr1")
flip_h = true

[node name="cloud4" type="TextureRect" parent="images/CloudFormation2"]
offset_left = -147.0
offset_top = -130.0
offset_right = 853.0
offset_bottom = 620.0
texture = ExtResource("4_7qsr1")

[node name="buttons" type="MarginContainer" parent="images"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -575.0
offset_top = -178.0
offset_right = -407.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.28, 3.28)

[node name="buttons" type="VBoxContainer" parent="images/buttons"]
layout_mode = 2
size_flags_vertical = 4

[node name="Play" type="Button" parent="images/buttons/buttons"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
focus_neighbor_top = NodePath("../scoreBoard")
focus_neighbor_right = NodePath("../../../../CheckButton")
focus_neighbor_bottom = NodePath("../Quit")
theme_override_fonts/font = ExtResource("2_occ5i")
theme_override_font_sizes/font_size = 35
text = "Play"

[node name="Quit" type="Button" parent="images/buttons/buttons"]
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_top = NodePath("../Play")
focus_neighbor_right = NodePath("../../../../CheckButton")
focus_neighbor_bottom = NodePath("../scoreBoard")
theme_override_fonts/font = ExtResource("2_occ5i")
theme_override_font_sizes/font_size = 35
text = "Quit"

[node name="scoreBoard" type="Button" parent="images/buttons/buttons"]
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_top = NodePath("../Quit")
focus_neighbor_right = NodePath("../../../../CheckButton")
focus_neighbor_bottom = NodePath(".")
theme_override_fonts/font = ExtResource("2_occ5i")
theme_override_font_sizes/font_size = 20
text = "High scores"

[node name="lightning" type="ColorRect" parent="images"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.533333)

[node name="Timer" type="Timer" parent="images/lightning"]
wait_time = 0.4
one_shot = true

[node name="Timer" type="Timer" parent="images"]
wait_time = 30.0
autostart = true

[node name="loading" type="Control" parent="images"]
visible = false
layout_mode = 3
anchors_preset = 0

[node name="ColorRect" type="ColorRect" parent="images/loading"]
layout_mode = 0
offset_right = 1150.0
offset_bottom = 650.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="images/loading"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.017
anchor_bottom = 0.018
offset_left = 517.0
offset_top = 296.0
offset_right = 537.416
offset_bottom = 307.336
theme_override_font_sizes/font_size = 20
text = "loading"
metadata/_edit_use_anchors_ = true

[node name="CheckButton" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 976.0
offset_top = 572.0
offset_right = 1065.0
offset_bottom = 603.0
scale = Vector2(1.51764, 1.44)
focus_neighbor_left = NodePath("../images/buttons/buttons/Play")
text = "mute
"

[connection signal="pressed" from="images/buttons/buttons/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="images/buttons/buttons/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="images/buttons/buttons/scoreBoard" to="." method="_on_score_board_pressed"]
[connection signal="timeout" from="images/Timer" to="." method="_on_timer_timeout"]
[connection signal="toggled" from="CheckButton" to="." method="_on_check_button_toggled"]
